src/ui/Hud.module.scss
.hud {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  gap: 0.4rem;
  position: absolute;
  bottom: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 0.8rem;
  margin: -0.1rem;
  z-index: 1;
  user-select: none;
}
.spacer {
  flex-grow: 1;
}
.button {
  display: block;
  padding: 0.2rem;
  border: none;
  line-height: 1;
  text-shadow: inherit;
  color: inherit;
  background: none;
  outline: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
}
.icon {
  display: block;
  font-size: 1.2rem;
  color: var(--text-color-base);
  transition:
    color 150ms,
    scale 150ms;
  .button:hover &,
  .button:focus &,
  .button:active & {
    color: var(--text-color-strong);
    scale: 1.4;
  }
}
.vrIcon {
  position: relative;
  font-size: 1.5rem;
  &::after {
    content: 'VR';
    display: block;
    position: absolute;
    top: 0.9em;
    left: 0;
    right: 0;
    margin: auto;
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 0.35em;
    color: #000000;
  }
}
// Disable hover effects on non-pointer devices.
@media (hover: none) {
  .button:hover .icon {
    color: var(--text-color-base);
    scale: 1;
  }
}

// Use stronger selector to override the default styles.
.hud .tooltip {
  padding: 0.2rem 0.5rem;
  border-radius: 0.15rem;
  font-size: max(12px, 0.6rem);
  color: var(--text-color-base);
  background-color: var(--background-color-base);
  opacity: 1;
}

